# bmstu-rsoi-lab4

./: docker-compose.yml  ingress.yaml
.github/workflows/: classroom.yml
helm-postgres/: values-postgres.yaml  values.yaml
helm-rsoi-lab/: Chart.yaml  values-gateway.yaml  values-loyalty.yaml  values-payment.yaml  values-reservation.yaml  values.yaml
helm-rsoi-lab/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm-rsoi-lab/templates/tests/: test-connection.yaml
svc-gateway/: Cargo.toml  Dockerfile
svc-gateway/src/: dto.rs  main.rs  routes.rs
svc-loyalty/: Cargo.toml  Dockerfile  diesel.toml
svc-loyalty/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
svc-loyalty/src/: dto.rs  main.rs  routes.rs  schema.rs
svc-payment/: Cargo.toml  Dockerfile  diesel.toml
svc-payment/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
svc-payment/src/: dto.rs  logger.rs  main.rs  routes.rs  schema.rs
svc-reservation/: Cargo.toml  Dockerfile  diesel.toml
svc-reservation/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
svc-reservation/src/: db_dto.rs  main.rs  request_dto.rs  response_dto.rs  routes.rs  schema.rs
v2/postman/: environment.json
