[package]
name = "bmstu-rsoi-lab2-payment"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "postgres", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
http-body-util = "0.1.2"
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tower = { version = "0.5.1", features = ["tokio"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.1.4"
utoipa-swagger-ui = { version = "8.1.1", features = ["axum"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

